src/themes/journal/scss/journal.scss
$black: #303030;
$gray: #686868;
$background: #fdf6e3;
$border-light: #ffeec1;
$light-gray: #e5e5e5;
$white: #fbfbfb;
$serif: 'Arvo';
// https://www.color-hex.com/color-palette/77451
// https://www.color-hex.com/color-palette/85528
$blue: #001eff;
$deep-blue: #0c4383;
$light-blue: #00ccfd;
$green: #3fff2d;
$light-green: #00ff9f;
$red: #ff2b2b;
$pink: #fd34b2;
$monospace: '"Source Code Pro"';
$fs: 1rem;
$fs-large: 1.125rem;
$std-margin: 0 0 1rem;
$break-small: 800px;

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  background-color: $background;

  color: $black;

  font-family: $serif, serif;
  font-size: $fs;

  @media screen and (min-width: $break-small) {
    font-size: $fs-large;
  }
}

body {
  line-height: 1.6;
}

html,
body {
  margin: 0;
}

h1,
p,
figure,
pre,
blockquote {
  margin: $std-margin;
}

p, ol, ul {
  text-align: justify;
}

hr {
  display: block;
  width: 100%;
  height: 0;
  margin: 2rem 0;

  border: 0;
  border-top: 1px solid $gray;

}

figure {
  .representation {
    display: block;
    margin: 0 0 .5rem;
  }
}

figure {
  text-align: center;
}

figcaption {
  padding: 0 .5rem .5rem;
  font-size: .8125rem;
  text-align: right;

  .original::before {
    content: ' ';
    display: block;
  }
}

img {
  max-width: 100%;
}

blockquote {
  padding: 1rem;
  border-left: 5px solid $light-gray;
  color: $gray;
  font-style: italic;

  p {
    margin: 0;
  }

  cite {
    display: block;
    margin: 1rem 0 0;
    font-size: .875rem;
    text-align: right;
  }
}

a {
  text-decoration: none;
  padding: 2px 0;
  color: $blue;

  &:hover {
    border-bottom-color: currentColor;
    color: $gray;
  }
}

ol,
ul {
  margin: 0 0 1rem 2.25rem;
  padding: 0;
  list-style-position: outside;

  ol,
  ul {
    margin-bottom: 0;
  }
}

li {
  margin: 0;

  &:not(last-of-type) {
    margin-bottom: .4rem;
  }
}

abbr {
  border-bottom: 1px dashed currentColor;
  text-decoration: none;
  cursor: help;
}

kbd,
code,
pre {
  font-family: $monospace, monospace;
}

pre {
  max-width: 100%;
}

kbd,
code {
  margin: 0;
  padding: .125rem .25rem 0;
}
p code {
  background: #000;
  color: lime;
  display: inline-block;
  border-radius: 5px;
  font-family: '"Source Code Pro"', monospace;
  font-size: 0.8rem;
  padding: 0px 5px 2px;
}

article,
section {
  display: block;
  margin-bottom: 1rem;
}

h1 {
  font-size: 1.875rem;
}

h2,
h3,
h4,
h5,
h6 {
  margin: 0 0 .5rem;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1.25rem;
}

h4 {
  font-size: 1rem;
}

h5 {
  font-size: 0.9rem;
}

h6 {
  font-size: 0.7rem;
}

.container {
  width: 100%;
  max-width: 38rem;
  margin: 0 auto;
  padding: .5rem;

  @media screen and (min-width: $break-small) {
    padding: 1rem 0;
  }
}

.site-header,
.site-nav {
  margin-bottom: 2rem;

  h1 {
    margin-bottom: .5rem;
  }
}

.site-nav a::before {
  content: '\2190'; // left arrow
  margin-right: .25rem;
}

.site-footer {
  margin: 3rem 0 0;
  font-size: .8125rem;

  [itemprop="sameAs"] + [itemprop="sameAs"] {
    margin-left: .4rem;
  }

  @media screen and (min-width: $break-small) {
    margin-bottom: .5rem;
  }
}

.posts {

  ol {
    margin-left: 0;
    list-style: none;
  }

  li {
    margin-bottom: .5rem;

    @media screen and (min-width: $break-small) {
      display: flex;
      flex-direction: row;
    }
  }

  time {
    display: block;

    @media screen and (min-width: $break-small) {
      flex: 0 0 5rem;
    }

    + a {
      margin-left: 1rem;

      @media screen and (min-width: $break-small) {
        margin-left: 2rem;
      }
    }
  }
}

.post {

  .post-header {
    margin-bottom: 3rem;
  }

  .post-date {
    display: block;
    margin: $std-margin;
    text-align: right;
  }
}

.hljs {
  font-size: .875rem;
}

// Shahin
pre.example {
  background: #3f3f3f;
  padding: 10px;
  font-size: 0.7rem;
  color: #dcdccc;
  margin-top: -17px;
  border-radius: 0 0 10px 10px;
}

ol {
  list-style: none;
  counter-reset: item;
}

ol>li {
  counter-increment: item;
  margin-bottom: 5px;
}

ol>li:before {
  content: "<" counter(item);
  color: $red;
  width: 1.2em;
  text-align: center;
  display: inline-block;
  font-weight: bold;
}

ol>li:after {
  content: " />";
  color: $red;
  opacity: 0.5;
}

li p {
  margin: 0;
  display: inline;
}

.timestamp {
  font-family: $monospace, monospace !important;
  text-transform: uppercase;
}

.glitch {
  position: relative;

  &::after {
    content: attr(data-text);
    position: absolute;
    left: 2px;
    text-shadow: -1px 0 $green;
    top: 0;
    background: $background;
    overflow: hidden;
    animation: noise-anim 8s infinite linear alternate-reverse;
  }

  &::before {
    content: attr(data-text);
    position: absolute;
    left: -2px;
    text-shadow: 1px 0 $blue;
    top: 0;
    background: $background;
    overflow: hidden;
    animation: noise-anim-2 30s infinite linear alternate-reverse;
  }
}

@keyframes noise-anim {
  $steps: 10;
  @for $i from 0 through $steps {
    #{percentage($i*(1/$steps))} {
      $top: random(100);
      $bottom: random(101 - $top);
      clip-path: inset(unquote("#{$top}% 0 #{$bottom}% 0"));
    }
  }
}

@keyframes noise-anim-2 {
  $steps: 30;
  @for $i from 0 through $steps {
    #{percentage($i*(1/$steps))} {
      $top: random(100);
      $bottom: random(101 - $top);
      clip-path: inset(unquote("#{$top}% 0 #{$bottom}% 0"));
    }
  }
}

.post {
  padding: 25px; /* mind the gap */
  --aug-border: 2px;
  --aug-border-bg: #ffeec1;
  --aug-l-height: 80%;
  --aug-l-width: 10px;
}

section#post-list {
  margin: 35px;
  padding: 25px; /* mind the gap */
  --aug-border: 2px;
  --aug-border-bg: #ffeec1;
  --aug-l-height: 80%;
  --aug-l-width: 10px;
}

#toc, #meta, #comments {
  padding: 20px 10px; /* mind the gap */
  margin-bottom: 20px;
  font-size: 80%;
  --aug-inset: 5px;
  --aug-inset-bg: #ffeec1;
  --aug-border: 2px;
  --aug-border-bg: #ffeec1;
  --aug-b-width: 80%;
  --aug-b-height: 5px;
  --aug-r-width: 5px;

  p {
    padding: 0 10px;
    margin: 0;
  }
}

